soup-session: Force cleanup of REMOTE_DISCONNECTED conns for sync sessions

get_connection() assumed that REMOTE_DISCONNECTED connections would get
implicitly cleaned up elsewhere in the code, which is true for async
sessions, but not sync ones. This could lead to connection exhaustion and
hence hangs.

Closes: https://bugzilla.gnome.org/show_bug.cgi?id=703463
(cherry picked from commit 2081c31235e7c2b3a15fa0a819631106cf4c3efa)